--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: pip install -r requirements.txt
+    buildCommand: 
+      - pip install -r requirements.txt
+      - alembic upgrade head
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
