--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,9 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: 
+    buildCommand:
       - pip install -r requirements.txt
       - alembic upgrade head
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: |
+      alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT
+
