--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,6 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand:
-      - pip install -r requirements.txt
-      - alembic upgrade head
-    startCommand: |
-      alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
 
